Update file-api spec (strict mode support)
