# internal/provider/file_resource_sdk.go
@@ -3,6 +3,7 @@
 package provider
 
 import (
+	"encoding/json"
 	tfTypes "github.com/epilot-dev/terraform-provider-epilot-file/internal/provider/types"
 	"github.com/epilot-dev/terraform-provider-epilot-file/internal/sdk/models/shared"
 	"github.com/hashicorp/terraform-plugin-framework/types"
@@ -10,6 +11,32 @@ import (
 )
 
 func (r *FileResourceModel) ToSharedSaveFilePayloadV2() *shared.SaveFilePayloadV2 {
+	additional := make(map[string]interface{})
+	for additionalKey, additionalValue := range r.Additional {
+		var additionalInst interface{}
+		_ = json.Unmarshal([]byte(additionalValue.ValueString()), &additionalInst)
+		additional[additionalKey] = additionalInst
+	}
+	var acl *shared.BaseEntityACL
+	if r.ACL != nil {
+		var delete []string = []string{}
+		for _, deleteItem := range r.ACL.Delete {
+			delete = append(delete, deleteItem.ValueString())
+		}
+		var edit []string = []string{}
+		for _, editItem := range r.ACL.Edit {
+			edit = append(edit, editItem.ValueString())
+		}
+		var view []string = []string{}
+		for _, viewItem := range r.ACL.View {
+			view = append(view, viewItem.ValueString())
+		}
+		acl = &shared.BaseEntityACL{
+			Delete: delete,
+			Edit:   edit,
+			View:   view,
+		}
+	}
 	id := new(string)
 	if !r.ID.IsUnknown() && !r.ID.IsNull() {
 		*id = r.ID.ValueString()
@@ -80,6 +107,8 @@ func (r *FileResourceModel) ToSharedSaveFilePayloadV2() *shared.SaveFilePayloadV
 		typeVar = nil
 	}
 	out := shared.SaveFilePayloadV2{
+		Additional:        additional,
+		ACL:               acl,
 		ID:                id,
 		Purpose:           purpose,
 		Tags:              tags,
@@ -97,10 +126,17 @@ func (r *FileResourceModel) ToSharedSaveFilePayloadV2() *shared.SaveFilePayloadV
 
 func (r *FileResourceModel) RefreshFromSharedFileEntity(resp *shared.FileEntity) {
 	if resp != nil {
+		if len(resp.Additional) > 0 {
+			r.Additional = make(map[string]types.String)
+			for key, value := range resp.Additional {
+				result, _ := json.Marshal(value)
+				r.Additional[key] = types.StringValue(string(result))
+			}
+		}
 		if resp.ACL == nil {
 			r.ACL = nil
 		} else {
-			r.ACL = &tfTypes.ACL{}
+			r.ACL = &tfTypes.BaseEntityACL{}
 			r.ACL.Delete = []types.String{}
 			for _, v := range resp.ACL.Delete {
 				r.ACL.Delete = append(r.ACL.Delete, types.StringValue(v))
@@ -121,6 +157,21 @@ func (r *FileResourceModel) RefreshFromSharedFileEntity(resp *shared.FileEntity)
 		}
 		r.ID = types.StringPointerValue(resp.ID)
 		r.Org = types.StringPointerValue(resp.Org)
+		r.Owners = []tfTypes.BaseEntityOwner{}
+		if len(r.Owners) > len(resp.Owners) {
+			r.Owners = r.Owners[:len(resp.Owners)]
+		}
+		for ownersCount, ownersItem := range resp.Owners {
+			var owners1 tfTypes.BaseEntityOwner
+			owners1.OrgID = types.StringValue(ownersItem.OrgID)
+			owners1.UserID = types.StringPointerValue(ownersItem.UserID)
+			if ownersCount+1 > len(r.Owners) {
+				r.Owners = append(r.Owners, owners1)
+			} else {
+				r.Owners[ownersCount].OrgID = owners1.OrgID
+				r.Owners[ownersCount].UserID = owners1.UserID
+			}
+		}
 		r.Purpose = []types.String{}
 		for _, v := range resp.Purpose {
 			r.Purpose = append(r.Purpose, types.StringValue(v))
